# CV_realsense

./: CMakeLists.txt  README.md
include/: ImageConsProd.hpp
src/: ImageConsProd.cpp  main.cpp
